--- a/kandi/bib.bib
+++ b/kandi/bib.bib
@@ -1,6 +1,35 @@
-@book{EVTHaan,
-  title={Extreme Value Theory},
-  author={Laurens De Haan, Ana Ferreira},
-  year={2009},
-  publisher={Springer}
+@book{deHaan,
+  title={Extreme Value Theory: An Introduction},
+  author={Laurens De Haan and Ana Ferreira},
+  isbn={9780387239460},
+  lccn={2006925909},
+  series={Springer Series in Operations Research and Financial Engineering},
+  year={2006},
+  publisher={Springer},
+  address={New York}
+}
+
+@article{renyi,
+author="R{\'e}nyi, Alfr{\'e}d",
+title="On the theory of order statistics",
+journal="Acta Mathematica Academiae Scientiarum Hungarica",
+year="1953",
+month="Sep",
+day="01",
+volume="4",
+number="3",
+pages="191--231",
+issn="1588-2632",
+doi="10.1007/BF02127580",
+url="https://doi.org/10.1007/BF02127580"
+}
+
+@book{rosenthal,
+  title={A First Look at Rigorous Probability Theory},
+  author={Jeffrey S. Rosenthal},
+  isbn={9789813101654},
+  year={2006},
+  publisher={World Scientific Publishing Co.},
+  address={Singapore},
+  edition={second edition}
 }
