--- a/kandi/kandi.tex
+++ b/kandi/kandi.tex
@@ -385,23 +385,24 @@ Otaniemi, 24.4.2018
 \subsection*{Symbols}
 
 \begin{tabular}{ll}
-$x^*=sup\{x : F(x)<1\}$  & right endpoint of the distribution  \\
+$x^*=\sup\{x : F(x)<1\}$  & right endpoint of the distribution  \\
 $\gamma$ & extreme value index \\
 $F^{\leftarrow}(y) = \inf\{x:F(x) \geq y \}$ & left-continuous inverse \\
 U & left-continuous inverse of $\frac{1}{1-F}$ \\
-$1(p)=
+$\mathbbm{1}(p)=
 \begin{cases}
 1 , \textrm{if p is true}\\
 0, \textrm{otherwise}
-\end{cases}$ & indicator fuction
+\end{cases}$ & indicator fuction \\
+$X_{i,n}$ & ith order statistic
 \end{tabular}
 
 \subsection*{Abbreviations}
 
 \begin{tabular}{ll}
 cdf         & cumulative distribution function \\
-i.d.d      & independent and identically distributed \\
-a.s         & almost surely\\
+i.d.d.     & independent and identically distributed \\
+a.s.         & almost surely\\
 \end{tabular}
 
 
@@ -433,13 +434,13 @@ a.s         & almost surely\\
 
 \subsection{Fisher-Tippett-Gnedenko Theorem}
 
-First approch to study behavior of extreme events would be to find limiting distribution of the sample maxima $M_n = max(X_1, X_2, ..., X_n)$. Here $X_1, X_2, ..., X_n$ are i.d.d random variables from cdf $F_X$. Function for the cdf of $M_n$ can be easily derived, since $X_1, X_2,..., X_3$ are i.d.d.
+First approach to study the behavior of extreme events could be to find limiting distribution of the sample maxima $M_n = \max(X_1, X_2, ..., X_n)$. Here $X_1, X_2, ..., X_n$ are i.d.d. random variables from cdf $F_X$. Function for the cdf of $M_n$ can be easily derived, since $X_1, X_2,..., X_3$ are i.d.d.
 \begin{gather*}
-P(max(X_1, X_2, ... , X_n) \leq x) = P(X_1 \leq x, X_2 \leq x,..., X_n \leq x) = \\
+P(\max(X_1, X_2, ... , X_n) \leq x) = P(X_1 \leq x, X_2 \leq x,..., X_n \leq x) = \\
 P(X_1 \leq x) P(X_2 \leq x) ... P(X_n \leq x) =  F^n(x).
 \end{gather*}
 
-Now it can be shown that this approach is not very fruitful since
+Now it can be shown that this approach is not very useful since
 
 \begin{gather*}
 \lim_{n\to\infty} F^n(x) = 
@@ -454,14 +455,18 @@ To achieve a nondegerate distribution it is necessary to normalize the sample ma
 \begin{theorem}
 There exists real constants $a_n>0$ and $b_n \in \mathbb{R}$ such that 
 
-\begin{equation}
-\lim_{n\to\infty} F^n(a_nx + b_n) = G_{\gamma}(x) =
+\begin{equation*}
+\lim_{n\to\infty} F^n(a_nx + b_n) = G_{\gamma}(ax+b),
+\end{equation*}
+where
+\begin{equation*}
+G_{\gamma}(x)=
 \begin{cases}
-exp(-(1 + \gamma x)^{-\frac{1}{\gamma}}), \gamma \neq 0 \\
-exp(-e^{-x}), \gamma = 0,
+\exp(-(1 + \gamma x)^{-\frac{1}{\gamma}}), \gamma \neq 0 \\
+\exp(-e^{-x}), \gamma = 0,
 \end{cases}
 \label{mdaEq}
-\end{equation}
+\end{equation*}
 for all x with $1+\gamma x > 0$ where $\gamma \in \mathbb{R}$.
 
 \end{theorem}
@@ -477,11 +482,11 @@ for all x with $1+\gamma x > 0$ where $\gamma \in \mathbb{R}$.
 
 \subsection{Consistency}
 
-The following theorem states that Hill estimator is consistent i.e estimator converges in probability to extreme value index. \cite{deHaan}
+The following theorem states that Hill estimator is consistent i.e. estimator converges in probability to extreme value index. \cite{deHaan}
 
 
 \begin{theorem}
-Let $X_1, X_2,...$ be i.d.d variables with cdf $F_X$. Suppose $F_X \in D(G_{\gamma})$ with $\gamma > 0$. Then as $n \rightarrow \infty$, $k=k(n)  \rightarrow \infty$, $\frac{k}{n} \rightarrow \infty$,
+Let $X_1, X_2,...$ be i.d.d. variables with cdf $F_X$. Suppose $F_X \in D(G_{\gamma})$ with $\gamma > 0$. Then as $n \rightarrow \infty$, $k=k(n)  \rightarrow \infty$, $\frac{k}{n} \rightarrow \infty$,
 
 \begin{equation*}
 \hat{\gamma}_H \xrightarrow{p} \gamma.
@@ -491,74 +496,111 @@ Let $X_1, X_2,...$ be i.d.d variables with cdf $F_X$. Suppose $F_X \in D(G_{\gam
 
 For the proof of the above theorem following lemmas are needed, firstly the Renyi's representation \cite{renyi}.
 \begin{lemma}
-If $E_1, E_2,...$ are i.d.d random variables from the standard exponential distribution and $E_{1,n} \leq E_{1,n} \leq ... \leq E_{n,n}$ then for $k \leq n$ we have
-\begin{multline}
-%\begin{equation}
+If $E_1, E_2,...$ are i.d.d. random variables from the standard exponential distribution and $E_{1,n} \leq E_{2,n} \leq ... \leq E_{n,n}$ then for $k \leq n$ we have
+\begin{multline*}
+%\begin{equation*}
 %\begin{split}
 \big(E_{1,n}, E_{2,n}, ... , E_{k,n}\big) 
 \overset{d}{=} \Big(\frac{E_1^*}{n}, \frac{E_1^*}{n}+\frac{E_2^*}{n-1}, ... , \frac{E_1^*}{n}+\frac{E_2^*}{n-1}+...+ \frac{E_k^*}{n-k+1}\Big),
 %\end{split}
-%\end{equation}
-\end{multline}
-where $E_1^*,E_2^*,...$ are i.d.d random variables from standard exponential distribution.
+%\end{equation*}
+\end{multline*}
+where $E_1^*,E_2^*,...$ are i.d.d. random variables from standard exponential distribution.
 \label{renrep}
 \end{lemma}
 
 Secondly the lemma about the order statistics of Pareto distribution is necessary \cite{deHaan}.
 
 \begin{lemma}
-Let $Y_1, Y_2, ...$ be i.d.d random variables from Pareto distribution $F_Y(y)=1-\frac{1}{y}$, $y \geq 0$ and let $Y_{1,n} \geq Y_{2,n} \geq ... \geq Y_{n,n}$ be the nth order statistics. Then with such $k=k(n)$ that $k \rightarrow \infty$, $\frac{k}{n} \rightarrow 0$ as $n \rightarrow \infty$,
+Let $Y_1, Y_2, ...$ be i.d.d. random variables from Pareto distribution $F_Y(y)=1-\frac{1}{y}$, $y \geq 0$ and let $Y_{1,n} \geq Y_{2,n} \geq ... \geq Y_{n,n}$ be the nth order statistics. Then with such $k=k(n)$ that $k \rightarrow \infty$, $\frac{k}{n} \rightarrow 0$ as $n \rightarrow \infty$,
 
-\begin{equation}
+\begin{equation*}
 \lim_{n\to\infty} Y_{n-k,n} = \infty  \quad  \text{a.s}.
-\end{equation}
+\end{equation*}
 \label{asconv}
+\end{lemma}
+
+Last lemma that we need says that U(Y) is equal in distribution to X, where Y is random variable from pareto distribution and X is random variable from some distribution $F_X$.
+
+\begin{lemma}
+Let $Y$ be random variable from Pareto distribution $F_Y=1-\frac{1}{y}$, $y \geq 0$ Let X be random variable with cdf $F_X$ then $U(Y) \overset{d}{=} X$.
+\label{U}
 \end{lemma}
 
 Next we prove the lemma \ref{asconv}. Proof of the lemma \ref{renrep} is omitted here.
 
 \begin{proof}
 Let us assume that $Y_{n-k,n} < r$ for some $r > 0$ infinitely often. In other words
-\begin{equation}
-\frac{k}{n} = \frac{1}{n} \sum_{i=1}^{n} 1(Y_i>Y_{n-k,n}) > \frac{1}{n} \sum_{i=1}^{n} 1(Y_i>r).
-\end{equation}
+\begin{equation*}
+\frac{k}{n} = \frac{1}{n} \sum_{i=1}^{n} \mathbbm{1}(Y_i>Y_{n-k,n}) > \frac{1}{n} \sum_{i=1}^{n} \mathbbm{1}(Y_i>r).
+\end{equation*}
 
 Now the left side of the equation converges to zero, since
-\begin{equation}
-\lim_{n\to\infty} \frac{1}{n} \sum_{i=1}^{n} 1(Y_i>Y_{n-k,n}) = \lim_{n\to\infty} \frac{k}{n} =0.
-\end{equation}
+\begin{equation*}
+\lim_{n\to\infty} \frac{1}{n} \sum_{i=1}^{n} \mathbbm{1}(Y_i>Y_{n-k,n}) = \lim_{n\to\infty} \frac{k}{n} =0.
+\end{equation*}
 
 But the right side converges to $1/r$ almost surely, since
 
-\begin{equation}
-\frac{1}{n} \sum_{i=1}^{n} 1(Y_i>r) \xrightarrow{a.s} P(Y_i>r) = 1-F_Y(r) = \frac{1}{r}
-\end{equation}
+\begin{equation*}
+\frac{1}{n} \sum_{i=1}^{n} \mathbbm{1}(Y_i>r) \xrightarrow{a.s} P(Y_i>r) = 1-F_Y(r) = \frac{1}{r}
+\end{equation*}
 by the strong law of large numbers \cite{rosenthal}.
 So the assumption cannot hold which implies that
 
-\begin{equation}
+\begin{equation*}
 P(\lim_{n\to\infty} Y_{n-k,n} = \infty)=1.
-\end{equation}
+\end{equation*}
 \end{proof}
+
+Now we prove the last lemma \ref{U} that is needed for the proof of theorem \ref{hillcons}
+
+\begin{proof}
+Let's study the condition $U(Y) \leq a, a \in \mathbb{R} $.
+\begin{equation*}
+\begin{split}
+U(Y) \leq a \\
+\Leftrightarrow \inf\big\{x: \frac{1}{1-F_X(x)} \geq Y\big\} \leq a
+\end{split}
+\end{equation*}
+\begin{equation}
+\Leftrightarrow \inf\big\{x: 1 - \frac{1}{Y} \leq F_X(x)\big\} \leq a
+\label{infeq}
+\end{equation}
+
+
+Let $S=\big\{x: 1 - \frac{1}{Y} \leq F_X(x)\big\}$ and $b = \inf S$. Notice that F is increasing and right-continuous, since F is a cdf. So S is an interval of form $[b,\infty)$ or $(b, \infty)$, since F is increasing. Let's define a sequence $x_n=b+\frac{1}{n}, n\in \mathbb{N}$. Notice that $x_n \rightarrow b$ and $x_n \in S$ for all $n$. Now right-continuity implies that $b \in S$ i.e $S$ is an interval $[b, \infty)$. Additionally $a \in S$ since $a\geq b$ so $a$ satisfies the condition $1-\frac{1}{Y} \leq F(a)$. Therefore the equation \ref{infeq} implies
+\begin{equation*}
+U(Y) \leq a \Leftrightarrow 1 - \frac{1}{Y} \leq F_X(a) \Leftrightarrow Y \leq \frac{1}{1-F(a)},
+\end{equation*}
+So now from the cdf of U(Y) we have
+\begin{equation*}
+\begin{split}
+F_{U(Y)} = P(U(Y) \leq x) = P\Big(Y \leq \frac{1}{1-F_X(x)}\Big) = F_Y\Big(\frac{1}{1-F_X(x)}\Big) \\
+= 1-\Big(\frac{1}{1-F_X(x)}\Big)^{-1} =F_X(x).
+\end{split}
+\end{equation*}
+\end{proof}
+
+
 
 Now we are equipped to prove the theorem \ref{hillcons}.
 
 \begin{proof}
 
-$F \in D(G_{\gamma>0})$ is equivalent to the fact that $U \in RV_{\gamma}$ i.e
+$F \in D(G_{\gamma>0})$ is equivalent to the fact that $U \in RV_{\gamma}$ i.e.
 
-\begin{equation}
+\begin{equation*}
 \lim_{t\to\infty} \frac{U(tx)}{U(t)} = x^{\gamma}.
-\end{equation}
+\end{equation*}
 
 From the uniform convergence of the regularly varying functions follows that for $x>1$ and $t \geq t_0$,
 
-\begin{equation}
+\begin{equation*}
 (1-\varepsilon) x^{\gamma - \delta} < \frac{U(tx)}{U(t)} < (1+\varepsilon) x^{\gamma + \delta},
-\label{RVnoteq}
-\end{equation}
+\end{equation*}
 
-for all $\varepsilon>0$ and $\delta>0$. By taking natural logarithm from both sides of the equation above can be written as
+for all $\varepsilon>0$ and $\delta>0$. By taking natural logarithm from both sides of the equation above, it can be written as
 
 \begin{equation}
 \begin{split}
@@ -568,22 +610,12 @@ for all $\varepsilon>0$ and $\delta>0$. By taking natural logarithm from both si
 \label{logRV}
 \end{equation}
 
-If $Y_1, Y_2,...$ are i.d.d random variables from Pareto distribution with cdf $F_Y(y) = 1 - \frac{1}{y}$ then $U(Y_i)  \overset{d}{=} X_i$, since
+If $Y_1, Y_2,...$ are i.d.d random variables from Pareto distribution with cdf $F_Y(y) = 1 - \frac{1}{y}$ then $U(Y_i)  \overset{d}{=} X_i$  as stated in theorem \ref{U}. Hence it is sufficient to prove the result for $ \hat{\gamma}_H =  \frac{1}{k} \sum_{i=0}^{k-1} \log(U(Y_{n-i,n})) - \log(U(Y_{n-k,n})) $. For $t = Y_{n-k,n}$ and $x =\frac{Y_{n-i,n}}{Y_{n-k,n}}$ equation \ref{logRV} has the form
 
-
-
-\begin{equation*}
-\begin{split}
-F_{U(Y_i)} = P(U(Y_i) \leq x) = P\Big(Y_i \leq \frac{1}{1-F_X(x)}\Big) = F_Y\Big(\frac{1}{1-F_X(x)}\Big) \\
-= 1-\Big(\frac{1}{1-F_X(x)}\Big)^{-1} =F_X(x).
-\end{split}
-\end{equation*}
-
-Hence it is sufficient to prove result for $ \hat{\gamma}_H =  \frac{1}{k} \sum_{i=0}^{k-1} \log(U(Y_{n-i,n})) - \log(U(Y_{n-k,n})) $. For $t = Y_{n-k,n}$ and $x =\frac{Y_{n-i,n}}{Y_{n-k,n}}$ equation \ref{logRV} has the form
 
 \begin{equation}
 \begin{split}
-\log(1 - \varepsilon) + (\gamma - \delta) \log(\frac{Y_{n-i,n}}{Y_{n-k,n}}) < \log(U(Y_{n-i,n})) - \log(U(Y_{n-k,n})) \\
+\log(1 - \varepsilon) + (\gamma - \delta) \log\Big(\frac{Y_{n-i,n}}{Y_{n-k,n}}\Big) < \log(U(Y_{n-i,n})) - \log(U(Y_{n-k,n})) \\
 < \log(1 + \varepsilon) + (\gamma + \delta) \log(\frac{Y_{n-i,n}}{Y_{n-k,n}}).
 \end{split}
 \label{log}
@@ -593,27 +625,27 @@ Notice that we can replace t with $Y_{n-k,n}$ because we can always find some $n
 
 Equation \ref{log} applies for every $i = 0,1,2,..., k-1$. Thus we can write
 
-\begin{equation}
+\begin{equation*}
 \begin{split}
-\log(1 - \varepsilon) + (\gamma - \delta) \frac{1}{k} \sum_{i=0}^{k-1} \log(\frac{Y_{n-i,n}}{Y_{n-k,n}}) < \frac{1}{k} \sum_{i=0}^{k-1} \log(U(Y_{n-i,n})) - \log(U(Y_{n-k,n})) \\
-< \log(1 + \varepsilon) + (\gamma + \delta) \frac{1}{k} \sum_{i=0}^{k-1} \log(\frac{Y_{n-i,n}}{Y_{n-k,n}}).
+\log(1 - \varepsilon) + (\gamma - \delta) \frac{1}{k} \sum_{i=0}^{k-1} \log\Big(\frac{Y_{n-i,n}}{Y_{n-k,n}}\Big) < \frac{1}{k} \sum_{i=0}^{k-1} \log(U(Y_{n-i,n})) - \log(U(Y_{n-k,n})) \\
+< \log(1 + \varepsilon) + (\gamma + \delta) \frac{1}{k} \sum_{i=0}^{k-1} \log\Big(\frac{Y_{n-i,n}}{Y_{n-k,n}}\Big).
 \end{split}
-\end{equation}
+\end{equation*}
 
 The term in the middle is the hill estimator $\hat{\gamma}_H$, hence above becomes
 
-\begin{equation}
+\begin{equation*}
 \begin{split}
-\log(1 - \varepsilon) + (\gamma - \delta) \frac{1}{k} \sum_{i=0}^{k-1} \log(\frac{Y_{n-i,n}}{Y_{n-k,n}}) < \hat{\gamma}_H \\
-< \log(1 + \varepsilon) + (\gamma + \delta) \frac{1}{k} \sum_{i=0}^{k-1} \log(\frac{Y_{n-i,n}}{Y_{n-k,n}}).
+\log(1 - \varepsilon) + (\gamma - \delta) \frac{1}{k} \sum_{i=0}^{k-1} \log\Big(\frac{Y_{n-i,n}}{Y_{n-k,n}}\Big) < \hat{\gamma}_H \\
+< \log(1 + \varepsilon) + (\gamma + \delta) \frac{1}{k} \sum_{i=0}^{k-1} \log\Big(\frac{Y_{n-i,n}}{Y_{n-k,n}}\Big).
 \end{split}
-\end{equation}
+\end{equation*}
 
 Now it is sufficient to only prove that 
 
-\begin{equation}
-\frac{1}{k} \sum_{i=0}^{k-1} \log(\frac{Y_{n-i,n}}{Y_{n-k,n}}) \xrightarrow{p} 1.
-\end{equation}
+\begin{equation*}
+\frac{1}{k} \sum_{i=0}^{k-1} \log\Big(\frac{Y_{n-i,n}}{Y_{n-k,n}}\Big) \xrightarrow{p} 1.
+\end{equation*}
 
 $\log(Y_i)$ has a standard exponential distribution, since 
 \begin{equation*}
@@ -623,11 +655,10 @@ F_{\log(Y_i)}(x) = P(\log(Y_i) < x) = P(e^{\log(Y_i)} < e^x) = P(Y_i < e^x) = F_
 \end{equation*}
 
 Therefore we can write
-\begin{equation}
-\frac{1}{k} \sum_{i=0}^{k-1} \log(\frac{Y_{n-i,n}}{Y_{n-k,n}}) = \frac{1}{k} \sum_{i=0}^{k-1} E_{n-i,n} - E_{n-k,n},
-\label{kesk}
-\end{equation}
-where $E_1, E_2,...$ are i.d.d random variables from standard exponential distribution. Now Renyi's representation \ref{renrep} implies
+\begin{equation*}
+\frac{1}{k} \sum_{i=0}^{k-1} \log\Big(\frac{Y_{n-i,n}}{Y_{n-k,n}}\Big) = \frac{1}{k} \sum_{i=0}^{k-1} E_{n-i,n} - E_{n-k,n},
+\end{equation*}
+where $E_1, E_2,...$ are i.d.d. random variables from standard exponential distribution. Now Renyi's representation \ref{renrep} implies
 
 \begin{equation*}
 \begin{split}
@@ -641,9 +672,9 @@ where $E_1, E_2,...$ are i.d.d random variables from standard exponential distri
 
 Consequently we have
 
-\begin{equation}
+\begin{equation*}
 \frac{1}{k} \sum_{i=0}^{k-1} \log\Big(\frac{Y_{n-i,n}}{Y_{n-k,n}}\Big) \overset{d}{=} \frac{1}{k} \sum_{i=0}^{k-1} E_{k-i,k} = \frac{1}{k} \sum_{i=0}^{k-1} E_i \xrightarrow{p} E[E_i] = 1
-\end{equation}
+\end{equation*}
 
 by the weak law of large numbers \cite{rosenthal}. Notice that the expected value of a standard exponential is one.
 
