--- a/kandi/bib.bib
+++ b/kandi/bib.bib
@@ -33,3 +33,26 @@ url="https://doi.org/10.1007/BF02127580"
   address={Singapore},
   edition={second edition}
 }
+
+@book{lahiri,
+  title={Measure Theory and Probability Theory},
+  author={Athreya, K.B. and Lahiri, S.N.},
+  isbn={9780387329031},
+  lccn={2006922767},
+  series={Springer Texts in Statistics},
+  year={2006},
+  publisher={Springer},
+  address={New York}
+}
+
+@book{resnick,
+  title={Heavy-Tail Phenomena: Probabilistic and Statistical Modeling},
+  author={Resnick, S.I.},
+  number={nid. 10},
+  isbn={9780387242729},
+  lccn={2006934621},
+  series={Springer Series in Operations Research and Financial Engineering},
+  year={2007},
+  publisher={Springer},
+  address={New York}
+}
